# build-LanguageForMyDaughter

./: CMakeLists.txt  README.md
src/: main.c
src/chunk/: chunk.c  chunk.h  debug.c  debug.h  object.c  object.h  value.c  value.h
src/common/: alloc-testing.c  alloc-testing.h  common.h  framework.c  try.h
src/compiler/: compiler.c  compiler.h  grammer.bnf  parser.c  parser.h  scanner.c  scanner.h
src/vm/: gc.c  gc.h  vm.c  vm.h
src/zcollection/include/hashtable/: hash_table.h
src/zcollection/src/hashtable/: hash_table.c
src/zjson/include/: zjson.h
src/zjson/src/: json.ebnf  zjson.c
src/zjson/test/: test-example.c  test-json.c
test/: test-chunk.c  test-gc.c  test-import.c  test-other.c  test-parser.c  test-trycatch.c  test-vm.c  test-vmarray.c  test_native.c  test_setjmp.c
test/example/: exps.duo
test/example/duoduolib/: lib.duo  lib2.duo  lib3.duo  libarr.duo  libc1.duo  libc2.duo  libc3.duo
test/example/duoduolib/circular/: c1.duo  c2.duo  c3.duo
test/example/duoduolib/l2/: libc4.duo
test/test_collection/: test-arraylist.c  test-arraylist_m.c  test-arraylist_m2.c  test-avl-tree.c  test-bh.c  test-bst.c  test-btree.c  test-btree2.c  test-dqueue.c  test-hashset.c  test-hashtable.c  test-hashtable_m.c  test-hashtable_m2.c  test-list.c  test-list_m.c  test-list_m2.c  test-pq.c  test-rb-tree.c  test-trie.c  test-uf.c
test/test_json/: test-example.c  test-json.c
testwasm/: ZHI_wasm.js  ZHI_wasm.wasm  index.html  index2.html  index3.html
wasm/: wasm_main.c
wasmzhistd/: baba.duo  duo.duo  mama.duo
website/: index.html  playground.html
website/code/: code1.duo  code10.duo  code11.duo  code12.duo  code2.duo  code3.duo  code4.duo  code5.duo  code6.duo  code7.duo  code8.duo  code9.duo
website/css/: style.css
website/js/: script.js
website/story/: story1.html  story10.html  story11.html  story12.html  story2.html  story3.html  story4.html  story5.html  story6.html  story7.html  story8.html  story9.html
website/wasm/: ZHI_wasm.js  ZHI_wasm.wasm
zhi/: main.c
